--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ jobs:
       - name: Get code
         uses: actions/checkout@v4
 
-      - name: Install Terraform
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y terraform
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.7.5
 
       - name: Terraform Init
         run: terraform init
